--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Housing - Login</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -19,6 +20,7 @@
     <input type="text" id="studentId" placeholder="ID" />
     <input type="email" id="regEmail" placeholder="Email" />
     <input type="password" id="regPassword" placeholder="Password" />
+    <label for="regRole">Role:</label>
     <select id="regRole">
       <option value="student" selected>Student</option>
       <option value="admin">Admin</option>
@@ -26,6 +28,6 @@
     <button onclick="register()">Register</button>
   </div>
 
-  <script src="/javascript/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
