--- a/frontend/admin-applications.html
+++ b/frontend/admin-applications.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - Applications</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <nav class="navbar">
@@ -11,8 +12,8 @@
       <h2>Admin Dashboard</h2>
     </div>
     <div class="nav-right">
-      <a href="/admin-applications.html">Applications</a>
-      <a href="/admin-rooms.html">Room Management</a>
+      <a href="admin-applications.html">Applications</a>
+      <a href="admin-rooms.html">Room Management</a>
       <span id="currentUserInfo"></span>
       <button onclick="logout()">Logout</button>
     </div>
@@ -38,6 +39,6 @@
       <tbody id="adminApplications"></tbody>
     </table>
   </div>
-  <script src="/javascript/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
