--- a/frontend/apply.html
+++ b/frontend/apply.html
@@ -12,13 +12,13 @@
       <h2>Student Housing System</h2>
     </div>
     <div class="nav-right">
-      <a href="/dashboard.html">Dashboard</a>
+      <a href="dashboard.html">Dashboard</a>
       <button onclick="logout()">Logout</button>
     </div>
   </nav>
   <h2>Select a Room to Apply</h2>
   <div id="hostelContainer" class="room-grid"></div>
 
-  <script src="/javascript/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
