--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="overlay"></div>
   <h2>Student Housing Portal</h2>
   <div class="form-container">
     <input type="email" id="email" placeholder="Email" />
