--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="overlay"></div>
-  <h2>Student Housing Portal</h2>
+  <h2>Hostel Royale</h2>
   <div class="form-container">
     <input type="email" id="email" placeholder="Email" />
     <input type="password" id="password" placeholder="Password" />
